Fix vertial spacing

--- a/css/backend.css
+++ b/css/backend.css
@@ -388,7 +388,7 @@ div.rpbchessboard-sourceCode {
 }
 
 .rpbchessboard-editFENDialog-sectionContent + .rpbchessboard-editFENDialog-sectionTitle {
-	margin-top: 1em;
+	margin-top: 1.3em;
 }
 
 .rpbchessboard-editFENDialog-turnField {
